--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
@@ -105,14 +105,14 @@
 		},
 		"STREAMING": {
 			"TITLE": "स्ट्रीमिंग",
-			"SUBTITLE": "अपने मीटिंग को अपने दर्शकों को स्ट्रीम करें",
-			"CONTENT_SUBTITLE": "OpenVidu को स्ट्रीमिंग प्लेटफॉर्म के RTMP url की आवश्यकता है।",
+			"SUBTITLE": "अपने दर्शकों के लिए अपनी मीटिंग स्ट्रीम करें",
+			"CONTENT_SUBTITLE": "OpenVidu को स्ट्रीमिंग प्लेटफ़ॉर्म का URL चाहिए।",
 			"START": "स्ट्रीमिंग शुरू करें",
-			"STOP": "स्ट्रीमिंग बंद करें",
-			"URL": "अपना RTMP url दर्ज करें",
+			"STOP": "स्ट्रीमिंग समाप्त करें",
+			"URL": "अपना स्ट्रीमिंग URL इन्सर्ट करें",
 			"CANCEL": "रद्द करें",
-			"REQUIRED_URL": "RTMP url आवश्यक है",
-			"NO_MODERATOR": "केवल मोडेरेटर स्ट्रीमिंग शुरू कर सकते हैं"
+			"REQUIRED_URL": "स्ट्रीमिंग URL अनिवार्य है",
+			"NO_MODERATOR": "केवल मॉडरेटर स्ट्रीमिंग शुरू कर सकते हैं"
 		}
 	},
 	"ERRORS": {
