--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/de.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/de.json
@@ -70,7 +70,8 @@
 		"PARTICIPANTS": {
 			"TITLE": "Teilnehmer",
 			"CAMERA": "KAMERA",
-			"SCREEN": "BILDSCHIRM"
+			"SCREEN": "BILDSCHIRM",
+			"YOU": "Sie"
 		},
 		"SETTINGS": {
 			"TITLE": "Einstellungen",
