--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/en.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/en.json
@@ -70,7 +70,8 @@
 		"PARTICIPANTS": {
 			"TITLE": "Participants",
 			"CAMERA": "CAMERA",
-			"SCREEN": "SCREEN"
+			"SCREEN": "SCREEN",
+			"YOU": "You"
 		},
 		"SETTINGS": {
 			"TITLE": "Settings",
