--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/es.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/es.json
@@ -70,7 +70,8 @@
 		"PARTICIPANTS": {
 			"TITLE": "Participantes",
 			"CAMERA": "CÁMARA",
-			"SCREEN": "PANTALLA"
+			"SCREEN": "PANTALLA",
+			"YOU": "Tú"
 		},
 		"SETTINGS": {
 			"TITLE": "Configuración",
