--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/fr.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/fr.json
@@ -70,7 +70,8 @@
 		"PARTICIPANTS": {
 			"TITLE": "Participants",
 			"CAMERA": "CAMÉRA",
-			"SCREEN": "ÉCRAN"
+			"SCREEN": "ÉCRAN",
+			"YOU": "vous"
 		},
 		"SETTINGS": {
 			"TITLE": "Paramètres",
