--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/hi.json
@@ -70,7 +70,8 @@
 		"PARTICIPANTS": {
 			"TITLE": "सदस्य",
 			"CAMERA": "कैमरा",
-			"SCREEN": "स्क्रीन"
+			"SCREEN": "स्क्रीन",
+			"YOU": "आप"
 		},
 		"SETTINGS": {
 			"TITLE": "सेटिंग्स",
