--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/it.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/it.json
@@ -70,7 +70,8 @@
 		"PARTICIPANTS": {
 			"TITLE": "Partecipanti",
 			"CAMERA": "CAMERA",
-			"SCREEN": "SCREEN"
+			"SCREEN": "SCREEN",
+			"YOU": "Tu"
 		},
 		"SETTINGS": {
 			"TITLE": "Impostazioni",
