--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/nl.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/nl.json
@@ -70,7 +70,8 @@
 		"PARTICIPANTS": {
 			"TITLE": "Deelnemers",
 			"CAMERA": "CAMERA",
-			"SCREEN": "SCHERM"
+			"SCREEN": "SCHERM",
+			"YOU": "Jij"
 		},
 		"SETTINGS": {
 			"TITLE": "Instellingen",
