--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/lang/pt.json
@@ -70,7 +70,8 @@
 		"PARTICIPANTS": {
 			"TITLE": "Participantes",
 			"CAMERA": "CÂMERA",
-			"SCREEN": "TELA"
+			"SCREEN": "TELA",
+			"YOU": "Você"
 		},
 		"SETTINGS": {
 			"TITLE": "Configurações",
