ov-components: Updated css styles for improving custom color support

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/es.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/es.json
@@ -114,7 +114,7 @@
 			"SUBTITLE": "Graba tus llamadas para la posteridad",
 			"CONTENT_TITLE": "Graba tu video conferencia",
 			"CONTENT_SUBTITLE": "Cuando la grabación haya finalizado, podrás descargarla con facilidad",
-			"STARTING": "Iniciando grabación",
+			"STARTING": "Iniciando grabación...",
 			"STOPPING": "Parando grabación",
 			"IN_PROGRESS": "Grabación en curso",
 			"PLAY": "Reproducir",
