ov-components: add disconnect and error messages for various scenarios in multiple language files

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/cn.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/cn.json
@@ -142,6 +142,13 @@
 		"SESSION": "连接到会话时有错误",
 		"CONNECTION": "连接丢失",
 		"RECONNECT": "试图重新连接到会话",
+		"DISCONNECT": "您已断开连接",
+		"NETWORK_DISCONNECT": "由于网络连接问题，您已断开连接",
+		"SIGNAL_CLOSE": "与服务器的连接意外关闭",
+		"SERVER_SHUTDOWN": "服务器当前已关闭或正在维护中",
+		"PARTICIPANT_REMOVED": "您已被移出此房间",
+		"ROOM_DELETED": "此房间已被删除",
+		"DUPLICATE_IDENTITY": "由于您的昵称已被分配给另一位参与者，您已被断开连接",
 		"TOGGLE_CAMERA": "切换相机时出现错误",
 		"TOGGLE_MICROPHONE": "切换麦克风时出现错误",
 		"SCREEN_SHARING": "分享屏幕出错",
