--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/de.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/de.json
@@ -142,6 +142,13 @@
 		"SESSION": "Es ist ein Fehler beim Verbinden mit der Sitzung aufgetreten",
 		"CONNECTION": "Verbindung verloren",
 		"RECONNECT": "Ich versuche, die Verbindung zur Sitzung wiederherzustellen...",
+		"DISCONNECT": "Sie wurden getrennt",
+		"NETWORK_DISCONNECT": "Sie wurden aufgrund eines Netzwerkproblems getrennt",
+		"SIGNAL_CLOSE": "Die Verbindung zum Server wurde unerwartet geschlossen",
+		"SERVER_SHUTDOWN": "Der Server ist derzeit nicht verfügbar oder wird gewartet",
+		"PARTICIPANT_REMOVED": "Sie wurden aus diesem Raum entfernt",
+		"ROOM_DELETED": "Dieser Raum wurde gelöscht",
+		"DUPLICATE_IDENTITY": "Sie wurden getrennt, da Ihr Spitzname einem anderen Teilnehmer zugewiesen wurde",
 		"TOGGLE_CAMERA": "Es gab einen Fehler beim Umschalten der Kamera",
 		"TOGGLE_MICROPHONE": "Es ist ein Fehler beim Umschalten des Mikrofons aufgetreten",
 		"SCREEN_SHARING": "Fehler beim Teilen des Bildschirms",
