--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/fr.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/fr.json
@@ -142,6 +142,13 @@
 		"SESSION": "There was an error connecting to the session",
 		"CONNECTION": "Connexion perdue",
 		"RECONNECT": "Oups ! Tentative de reconnexion à la session...",
+		"DISCONNECT": "Vous avez été déconnecté",
+		"NETWORK_DISCONNECT": "Vous avez été déconnecté en raison d'un problème de connexion réseau",
+		"SIGNAL_CLOSE": "La connexion au serveur a été interrompue de manière inattendue",
+		"SERVER_SHUTDOWN": "Le serveur est actuellement hors service ou en maintenance",
+		"PARTICIPANT_REMOVED": "Vous avez été retiré de cette salle",
+		"ROOM_DELETED": "Cette salle a été supprimée",
+		"DUPLICATE_IDENTITY": "Vous avez été déconnecté car votre pseudo a été attribué à un autre participant",
 		"TOGGLE_CAMERA": "There was an error toggle camera",
 		"TOGGLE_MICROPHONE": "There was an error toggling microhpone",
 		"SCREEN_SHARING": "Erreur de partage d'écran",
