--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/hi.json
@@ -142,6 +142,13 @@
 		"SESSION": "सत्र से जुड़ने में त्रुटि हुई",
 		"CONNECTION": "कनेक्शन खो गया",
 		"RECONNECT": "ओह! सत्र से फिर से कनेक्ट करने का प्रयास कर रहा है",
+		"DISCONNECT": "आपको डिस्कनेक्ट कर दिया गया है",
+		"NETWORK_DISCONNECT": "नेटवर्क कनेक्टिविटी समस्या के कारण आपका कनेक्शन टूट गया",
+		"SIGNAL_CLOSE": "सर्वर से कनेक्शन अप्रत्याशित रूप से बंद हो गया",
+		"SERVER_SHUTDOWN": "सर्वर अभी बंद है या रखरखाव में है",
+		"PARTICIPANT_REMOVED": "आपको इस कमरे से हटा दिया गया है",
+		"ROOM_DELETED": "यह कमरा हटा दिया गया है",
+		"DUPLICATE_IDENTITY": "आपको डिस्कनेक्ट कर दिया गया क्योंकि आपका उपनाम किसी अन्य प्रतिभागी को सौंपा गया है",
 		"TOGGLE_CAMERA": "कैमरा टॉगल करने में त्रुटि हुई",
 		"TOGGLE_MICROPHONE": "माइक्रोफ़ोन को चालू करने में त्रुटि हुई",
 		"SCREEN_SHARING": "स्क्रीन साझा करने में त्रुटि",
