--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/it.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/it.json
@@ -142,6 +142,13 @@
 		"SESSION": "Si è verificato un errore di connessione alla sessione",
 		"CONNECTION": "Connessione persa",
 		"RECONNECT": "Oops! Si sta cercando di riconnettersi alla sessione...",
+		"DISCONNECT": "Sei stato disconnesso",
+		"NETWORK_DISCONNECT": "Sei stato disconnesso a causa di un problema di connettività di rete",
+		"SIGNAL_CLOSE": "La connessione al server è stata chiusa inaspettatamente",
+		"SERVER_SHUTDOWN": "Il server è attualmente inattivo o in manutenzione",
+		"PARTICIPANT_REMOVED": "Sei stato rimosso da questa stanza",
+		"ROOM_DELETED": "Questa stanza è stata eliminata",
+		"DUPLICATE_IDENTITY": "Sei stato disconnesso perché il tuo soprannome è stato assegnato a un altro partecipante",
 		"TOGGLE_CAMERA": "Si è verificato un errore nell'attivazione della telecamera",
 		"TOGGLE_MICROPHONE": "Si è verificato un errore nell'attivazione del microfono",
 		"SCREEN_SHARING": "Errore nella condivisione dello schermo",
