--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/ja.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/ja.json
@@ -142,6 +142,13 @@
 		"SESSION": "セッションへの接続にエラーが発生しました",
 		"CONNECTION": "接続が失われました",
 		"RECONNECT": "セッションへの再接続を試みています",
+		"DISCONNECT": "接続が切断されました",
+		"NETWORK_DISCONNECT": "ネットワーク接続の問題により切断されました",
+		"SIGNAL_CLOSE": "サーバーへの接続が予期せず切断されました",
+		"SERVER_SHUTDOWN": "サーバーは現在ダウンしているか、メンテナンス中です",
+		"PARTICIPANT_REMOVED": "このルームから削除されました",
+		"ROOM_DELETED": "このルームは削除されました",
+		"DUPLICATE_IDENTITY": "ニックネームが他の参加者に割り当てられたため、切断されました",
 		"TOGGLE_CAMERA": "カメラの切り替えに失敗しました",
 		"TOGGLE_MICROPHONE": "マイクの切り替えに失敗しました",
 		"SCREEN_SHARING": "画面共有にエラーが発生しました",
