--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/nl.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/nl.json
@@ -142,6 +142,13 @@
 		"SESSION": "Er is een fout opgetreden bij het verbinden met de sessie",
 		"CONNECTION": "Verbinding verloren",
 		"RECONNECT": "Proberen opnieuw verbinding te maken met de sessie...",
+		"DISCONNECT": "Je bent losgekoppeld",
+		"NETWORK_DISCONNECT": "Je bent losgekoppeld vanwege een netwerkprobleem",
+		"SIGNAL_CLOSE": "De verbinding met de server werd onverwacht verbroken",
+		"SERVER_SHUTDOWN": "De server is momenteel offline of ondergaat onderhoud",
+		"PARTICIPANT_REMOVED": "Je bent uit deze kamer verwijderd",
+		"ROOM_DELETED": "Deze kamer is verwijderd",
+		"DUPLICATE_IDENTITY": "Je bent losgekoppeld omdat je bijnaam aan een andere deelnemer is toegewezen",
 		"TOGGLE_CAMERA": "Er is een fout opgetreden bij het overschakelen naar een andere camera",
 		"TOGGLE_MICROPHONE": "Er is een fout opgetreden bij het overschakelen naar een microfoon",
 		"SCREEN_SHARING": "Fout bij het delen van het scherm",
