--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/pt.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/pt.json
@@ -142,6 +142,13 @@
 		"SESSION": "Houve um erro de ligação à sessão",
 		"CONNECTION": "Ligação perdida",
 		"RECONNECT": "A tentar restabelecer a ligação à sessão...",
+		"DISCONNECT": "Você foi desconectado",
+		"NETWORK_DISCONNECT": "Você foi desconectado devido a um problema de conectividade de rede",
+		"SIGNAL_CLOSE": "A conexão com o servidor foi encerrada inesperadamente",
+		"SERVER_SHUTDOWN": "O servidor está atualmente fora do ar ou em manutenção",
+		"PARTICIPANT_REMOVED": "Você foi removido desta sala",
+		"ROOM_DELETED": "Esta sala foi excluída",
+		"DUPLICATE_IDENTITY": "Você foi desconectado porque seu apelido foi atribuído a outro participante",
 		"TOGGLE_CAMERA": "Houve um erro ao alternar a câmara",
 		"TOGGLE_MICROPHONE": "Houve um erro ao alternar microhpone",
 		"SCREEN_SHARING": "ecrã_partilha de erros",
