--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/en.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/en.json
@@ -142,13 +142,14 @@
 		"SESSION": "There was an error connecting to the room",
 		"CONNECTION": "Connection lost",
 		"RECONNECT": "Oops! Trying to reconnect to the room...",
-		"DISCONNECT": "Te has desconectado",
-		"NETWORK_DISCONNECT": "Te desconectaste debido a un problema de conectividad de red",
-		"SIGNAL_CLOSE": "La conexión con el servidor se cerró inesperadamente",
-		"SERVER_SHUTDOWN": "El servidor está actualmente fuera de servicio o en mantenimiento",
-		"PARTICIPANT_REMOVED": "Has sido eliminado de esta sala",
-		"ROOM_DELETED": "Esta sala ha sido eliminada",
-		"DUPLICATE_IDENTITY": "Te has desconectado porque tu alias ha sido asignado a otro participante",
+		"DISCONNECT": "You have been disconnected",
+		"NETWORK_DISCONNECT": "You were disconnected due to a network connectivity issue",
+		"SIGNAL_CLOSE": "The connection to the server was unexpectedly closed",
+		"SERVER_SHUTDOWN": "The server is currently down or under maintenance",
+		"PARTICIPANT_REMOVED": "You have been removed from this room",
+		"ROOM_DELETED": "This room has been deleted",
+		"DUPLICATE_IDENTITY": "You have been disconnected because your alias was assigned to another participant",
+		"UNKNOWN_DISCONNECT": "You have been disconnected from the room",
 		"TOGGLE_CAMERA": "There was an error toggling camera",
 		"TOGGLE_MICROPHONE": "There was an error toggling microhpone",
 		"SCREEN_SHARING": "Error sharing screen",
