--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/hi.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/lang/hi.json
@@ -149,6 +149,7 @@
 		"PARTICIPANT_REMOVED": "आपको इस कमरे से हटा दिया गया है",
 		"ROOM_DELETED": "यह कमरा हटा दिया गया है",
 		"DUPLICATE_IDENTITY": "आपको डिस्कनेक्ट कर दिया गया क्योंकि आपका उपनाम किसी अन्य प्रतिभागी को सौंपा गया है",
+		"UNKNOWN_DISCONNECT": "आप कक्ष से डिस्कनेक्ट हो गए हैं",
 		"TOGGLE_CAMERA": "कैमरा टॉगल करने में त्रुटि हुई",
 		"TOGGLE_MICROPHONE": "माइक्रोफ़ोन को चालू करने में त्रुटि हुई",
 		"SCREEN_SHARING": "स्क्रीन साझा करने में त्रुटि",
